# ChangeLog for app-crypt/mhash
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/mhash/ChangeLog,v 1.53 2008/02/03 02:37:58 robbat2 Exp $

  03 Feb 2008; Robin H. Johnson <robbat2@gentoo.org>
  -files/mhash-0.9.3-mhash_free.patch, -mhash-0.9.1.ebuild,
  -mhash-0.9.2.ebuild, -mhash-0.9.3.ebuild, -mhash-0.9.3-r1.ebuild,
  -mhash-0.9.8.1.ebuild:
  Clean up old ebuilds.

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> mhash-0.9.9-r1.ebuild:
  alpha/ia64/x86 stable

  26 Oct 2007; Jeroen Roovers <jer@gentoo.org> mhash-0.9.9-r1.ebuild:
  Stable for HPPA too.

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> mhash-0.9.9-r1.ebuild:
  amd64 stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mhash-0.9.9-r1.ebuild:
  ppc. stable

  29 Jul 2007; Tom Gall <tgall@gentoo> mhash-0.9.9-r1.ebuild:
  stable on ppc64

*mhash-0.9.9-r1 (25 Jul 2007)

  25 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/mhash-0.9.9-mutils-align.patch, +mhash-0.9.9-r1.ebuild:
  New rev with alignment fixes and sparc stable wrt #181563

  14 Jun 2007; Christoph Mende <angelos@gentoo.org> mhash-0.9.9.ebuild:
  Stable on amd64 wrt bug 181563

  11 Jun 2007; Markus Rothe <corsair@gentoo.org> mhash-0.9.9.ebuild:
  Stable on ppc64; bug #181563

  11 Jun 2007; nixnut <nixnut@gentoo.org> mhash-0.9.9.ebuild:
  Stable on ppc wrt bug 181563

  11 Jun 2007; Raúl Porcel <armin76@gentoo.org> mhash-0.9.9.ebuild:
  alpha/ia64/x86 stable wrt #181563

  11 Jun 2007; Fabian Groffen <grobian@gentoo.org> mhash-0.9.8.1.ebuild,
  mhash-0.9.9.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  10 Jun 2007; Jeroen Roovers <jer@gentoo.org> mhash-0.9.9.ebuild:
  Stable for HPPA (bug #181563).

  10 Jun 2007; Joshua Kinard <kumba@gentoo.org> mhash-0.9.9.ebuild:
  Stable on mips, per #181563.

*mhash-0.9.9 (01 May 2007)

  01 May 2007; Robin H. Johnson <robbat2@gentoo.org> +mhash-0.9.9.ebuild:
  Version bump.

*mhash-0.9.8.1 (28 Mar 2007)
